adding new Config errors, adding Graphs and files repositories, GraphService for manaing all the graph-related changes from the servlets! Adding new confs